<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

			<TextView
                android:id="@+id/ShortcutsSetShortcutText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/ChooseShortcut"
				android:textSize="8pt" />

            <view
				class="com.rgpike.latitudeshortcuts.IconButton"
                android:id="@+id/ShortcutsSetShortcutButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_all"
                android:paddingLeft="32sp"
                android:text="@string/WidgetChooseShortcut"
                android:textSize="8pt" />

			<TextView
                android:id="@+id/ShortcutsSetIconText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingTop="8dip"
				android:text="@string/ChooseIcon"
				android:textSize="8pt" />

			<view
				class="com.rgpike.latitudeshortcuts.IconButton"
                android:id="@+id/ShortcutsSetIconButton"
				android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:paddingLeft="32sp"
                android:text="@string/WidgetSetIconText"
                android:textSize="8pt" />

			<TextView
                android:id="@+id/ShortcutsCreateShortcutText"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingTop="8dip"
				android:text="@string/CreateShortcut"
				android:textSize="8pt" />

            <Button
                android:id="@+id/ShortcutsCreateShortcutButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/WidgetCreateShortcut"
                android:textSize="8pt" />

            <Button
                android:id="@+id/CreateAllButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
				android:layout_marginTop="24sp"
                android:drawableLeft="@drawable/ic_all"
                android:paddingLeft="32sp"
                android:text="@string/CreateAllButtonText"
                android:textSize="8pt" />

</LinearLayout>
